fix: use internal dns and add separate tailscale ingress

--- a/k8s/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/service.yaml
@@ -3,9 +3,8 @@ kind: Service
 metadata:
   name: postgres-lb
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: postgres.solanyn.dev
-    lbipam.cilium.io/ips: 192.168.168.125
-    tailscale.com/tailnet-fqdn: postgres.bison-beaufort.ts.net
+    external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
+    lbipam.cilium.io/ips: 192.168.68.125
 spec:
   type: LoadBalancer
   ports:
