--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -67,17 +67,16 @@ spec:
             port: *port
     ingress:
       app:
-        className: tailscale
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.devbu.io
+        className: internal
         hosts:
-          - host: books
+          - host: "{{ .Release.Name }}.devbu.io"
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - books
     persistence:
       media:
         type: nfs
