--- a/k8s/apps/default/kopia/app/helmrelease.yaml
+++ b/k8s/apps/default/kopia/app/helmrelease.yaml
@@ -98,18 +98,17 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
     ingress:
-      main:
-        className: tailscale
+      app:
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.devbu.io
+        className: internal
         hosts:
-          - host: kopia
+          - host: "{{ .Release.Name }}.devbu.io"
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - kopia
     persistence:
       config:
         type: emptyDir
