--- a/k8s/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/cilium/app/helmrelease.yaml
@@ -51,11 +51,8 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
-          className: tailscale
+          className: internal
           hosts: ["hubble"]
-          tls:
-            - hosts:
-                - hubble
     operator:
       prometheus:
         enabled: true
