--- a/k8s/apps/default/adguard/app/helmrelease.yaml
+++ b/k8s/apps/default/adguard/app/helmrelease.yaml
@@ -71,17 +71,16 @@ spec:
             port: 80
     ingress:
       app:
-        className: tailscale
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.devbu.io
+        className: internal
         hosts:
-          - host: adguard
+          - host: "{{ .Release.Name }}.devbu.io"
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - adguard
     persistence:
       tmp:
         type: emptyDir
