--- a/k8s/apps/default/autobrr/app/helmrelease.yaml
+++ b/k8s/apps/default/autobrr/app/helmrelease.yaml
@@ -81,17 +81,16 @@ spec:
             port: *port
     ingress:
       app:
-        className: tailscale
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.devbu.io
+        className: internal
         hosts:
-          - host: autobrr
+          - host: "{{ .Release.Name }}.devbu.io"
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        tls:
-          - hosts:
-              - autobrr
     persistence:
       tmp:
         type: emptyDir
