--- a/k8s/apps/default/radarr/app/helmrelease.yaml
+++ b/k8s/apps/default/radarr/app/helmrelease.yaml
@@ -91,10 +91,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN
+          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
         className: internal
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_DOMAIN"
+          - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
               - path: /
                 service:
