--- a/k8s/apps/network/ingress-nginx/certificates/staging.yaml
+++ b/k8s/apps/network/ingress-nginx/certificates/staging.yaml
@@ -1,9 +1,9 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${SECRET_DOMAIN}/./-}-staging"
+  name: "${SECRET_DOMAIN/./-}-staging"
 spec:
-  secretName: "${SECRET_DOMAIN}/./-}-staging-tls"
+  secretName: "${SECRET_DOMAIN/./-}-staging-tls"
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
