feat: use pihole for internal dns

--- a/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app external-dns
+  name: &app external-dns-cloudflare
 spec:
   interval: 30m
   chart:
@@ -26,14 +26,22 @@ spec:
     fullnameOverride: *app
     provider: cloudflare
     env:
-      - name: CF_API_TOKEN
+      - name: &name CF_API_EMAIL
         valueFrom:
           secretKeyRef:
-            name: external-dns-secret
-            key: api-token
+            name: &secret external-dns-cloudflare-secret
+            key: *name
+      - name: &name CF_API_KEY
+        valueFrom:
+          secretKeyRef:
+            name: *secret
+            key: *name
     extraArgs:
+      - --cloudflare-dns-records-per-page=1000
+      - --events
       - --ingress-class=external
       - --cloudflare-proxied
+      - --ignore-ingress-tls-spec
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
     policy: sync
@@ -44,4 +52,4 @@ spec:
     serviceMonitor:
       enabled: true
     podAnnotations:
-      secret.reloader.stakater.com/reload: external-dns-secret
+      secret.reloader.stakater.com/reload: *secret
