--- a/k8s/apps/network/external-dns/ks.yaml
+++ b/k8s/apps/network/external-dns/ks.yaml
@@ -1,14 +1,33 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app external-dns
+  name: &app external-dns-cloudflare
   namespace: flux-system
 spec:
   targetNamespace: network
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/network/external-dns/app
+  path: ./k8s/apps/network/external-dns/cloudflare/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: homelab
+  wait: true
+  interval: 30m
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app external-dns-pihole
+  namespace: flux-system
+spec:
+  targetNamespace: network
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./k8s/apps/network/external-dns/pihole/app
   prune: true
   sourceRef:
     kind: GitRepository
