fix: dependsOn name and use externalsecret

--- a/k8s/apps/network/cloudflared/ks.yaml
+++ b/k8s/apps/network/cloudflared/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-dns
+    - name: external-dns-cloudflare
   path: ./k8s/apps/network/cloudflared/app
   prune: true
   sourceRef:
