--- a/k8s/apps/network/external-dns/pihole/externalsecret.yaml
+++ b/k8s/apps/network/external-dns/pihole/externalsecret.yaml
@@ -2,18 +2,18 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: external-dns-cloudflare
+  name: external-dns-pihole
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: external-dns-cloudflare-secret
+    name: external-dns-pihole-secret
     template:
       engineVersion: v2
       data:
-        CF_API_EMAIL: "{{ .CLOUDFLARE_EMAIL }}"
-        CF_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
+        EXTERNAL_DNS_PIHOLE_SERVER: "{{ .EXTERNAL_DNS_PIHOLE_SERVER }}"
+        EXTERNAL_DNS_PIHOLE_PASSWORD: "{{ .EXTERNAL_DNS_PIHOLE_PASSWORD }}"
   dataFrom:
     - extract:
-        key: cloudflare
+        key: external-dns-pihole
