--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -3,6 +3,34 @@ version: "3"
 vars:
   KUBECONFORM_SCRIPT: "{{.SCRIPTS_DIR}}/kubeconform.sh"
 tasks:
+  delete-failed-pods:
+    desc: Delete all pods with an Evicted/Failed/Succeeded status
+    summary: |
+      CLUSTER: Cluster to run command against (default: main)
+    cmds:
+      - for: ['Evicted', 'Failed', 'Succeeded']
+        cmd: kubectl delete pods --field-selector status.phase={{.ITEM}} -A --ignore-not-found=true
+    vars:
+      CLUSTER: '{{.CLUSTER}}'
+  sync-secrets:
+    desc: Sync ExternalSecret resources from provider
+    summary: |
+      CLUSTER: Cluster to run command against (default: main)
+      NS: Namespace to sync secret in (default: default)
+      SECRET: Secret to sync (default: all secrets)
+    cmd: |
+      {{if eq .SECRET ""}}
+        kubectl get externalsecret --all-namespaces --no-headers -A | awk '{print $1, $2}' \
+          | xargs --max-procs=2 -l bash -c 'kubectl -n $0 annotate externalsecret $1 force-sync=$(date +%s) --overwrite'
+      {{else}}
+        kubectl --namespace {{.NS}} annotate externalsecret {{.SECRET}} force-sync=$(date +%s) --overwrite
+      {{end}}
+    vars:
+      SECRET: '{{ .SECRET | default ""}}'
+      NS: '{{.NS | default "default"}}'
+      CLUSTER: '{{.CLUSTER}}'
+    preconditions:
+      - kubectl --namespace {{.NS}} get externalsecret {{.SECRET}}
   resources:
     desc: Gather common resources in your cluster, useful when asking for support
     cmds:
