--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -35,7 +35,7 @@ spec:
         maxParallel: 8
       destinationPath: s3://cloudnative-pg/
       endpointURL: http://minio.default.svc.cluster.local:9000
-      # Note: serverName version needs to be inclemented
+      # Note: serverName version needs to be incremented
       # when recovering from an existing cnpg cluster
       serverName: &currentCluster postgres16-v1
       s3Credentials:
@@ -48,15 +48,15 @@ spec:
   # Note: previousCluster needs to be set to the name of the previous
   # cluster when recovering from an existing cnpg cluster
   bootstrap:
-    # NOTE: Set initdb and comment out recovery when no backup!
-    initdb:
-      database: postgres16-v0
-      owner: postgres
-      # recovery:
-      #   source: &previousCluster postgres16-v0
+    # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
+    # initdb:
+    #   database: postgres16-v0
+    #   owner: postgres
+    recovery:
+      source: &previousCluster postgres16-v0
   # NOTE: externalClusters is needed when recovering from an EXISTING cnpg cluster
-  # externalClusters:
-  #   - name: *previousCluster
-  #     barmanObjectStore:
-  #       !!merge <<: *barmanObjectStore
-  #       serverName: *previousCluster
+  externalClusters:
+    - name: *previousCluster
+      barmanObjectStore:
+        !!merge <<: *barmanObjectStore
+        serverName: *previousCluster
