--- a/k8s/apps/default/prowlarr/app/helmrelease.yaml
+++ b/k8s/apps/default/prowlarr/app/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
               PROWLARR__LOG__LEVEL: info
               PROWLARR__SERVER__PORT: &port 80
               PROWLARR__UPDATE__BRANCH: develop
-              TZ: Australia/Sydney
+              TZ: "Australia/Sydney"
             envFrom: *envFrom
             probes:
               liveness: &probes
