--- a/k8s/apps/default/sonarr/app/helmrelease.yaml
+++ b/k8s/apps/default/sonarr/app/helmrelease.yaml
@@ -51,8 +51,8 @@ spec:
               SONARR__LOG__LEVEL: info
               SONARR__SERVER__PORT: &port 80
               SONARR__UPDATE__BRANCH: develop
-              TZ: Australia/Sydney
-            # envFrom: *envFrom
+              TZ: "Australia/Sydney"
+            envFrom: *envFrom
             probes:
               liveness: &probes
                 enabled: true
