fix: formatting, remove kubeconform, add some tasks, update github deploy key

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
 repos:
+repos:
   - repo: https://github.com/google/yamlfmt
     # renovate: datasource=github-releases depName=google/yamlfmt
-    rev: v0.10.0
+    rev: v0.13.0
     hooks:
       - id: yamlfmt
   - repo: https://github.com/onedr0p/sops-pre-commit
