--- a/k8s/flux/config/cluster.yaml
+++ b/k8s/flux/config/cluster.yaml
@@ -13,6 +13,8 @@ spec:
     /*
     # include kubernetes directory
     !/k8s
+  secretRef:
+    name: github-deploy-key
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
