fix: provider for external-dns-cloudflare and add security context for external-dns-pihole

--- a/k8s/apps/network/external-dns/pihole/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/pihole/helmrelease.yaml
@@ -50,3 +50,5 @@ spec:
         enabled: true
       podAnnotations:
         secret.reloader.stakater.com/reload: *secret
+      securityContext:
+        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files
