--- a/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -24,7 +24,8 @@ spec:
       retries: 3
   values:
     fullnameOverride: *app
-    provider: cloudflare
+    provider:
+      name: cloudflare
     env:
       - name: &name CF_API_EMAIL
         valueFrom:
