--- a/k8s/apps/network/external-dns/pihole/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/pihole/helmrelease.yaml
@@ -26,29 +26,27 @@ spec:
     fullnameOverride: *app
     provider:
       name: pihole
-      env:
-        - name: EXTERNAL_DNS_PIHOLE_SERVER
-          valueFrom:
-            secretKeyRef:
-              name: &secret external-dns-pihole-secret
-              key: EXTERNAL_DNS_PIHOLE_SERVER
-        - name: EXTERNAL_DNS_PIHOLE_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: *secret
-              key: EXTERNAL_DNS_PIHOLE_PASSWORD
-      extraArgs:
-        - --ingress-class=internal
-        - --registry=noop
-        - --policy=upsert-only
-        - --ignore-ingress-tls-spec
-        - --pihole-tls-skip-verify
-      policy: sync
-      sources: ["service", "ingress"]
-      domainFilters: ["${SECRET_DOMAIN}"]
-      serviceMonitor:
-        enabled: true
-      podAnnotations:
-        secret.reloader.stakater.com/reload: *secret
-      securityContext:
-        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files
+    env:
+      - name: &name EXTERNAL_DNS_PIHOLE_SERVER
+        valueFrom:
+          secretKeyRef:
+            name: &secret external-dns-pihole-secret
+            key: *name
+      - name: &name EXTERNAL_DNS_PIHOLE_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: *secret
+            key: *name
+    extraArgs:
+      - --ingress-class=internal
+      - --registry=noop
+      - --policy=upsert-only
+      - --ignore-ingress-tls-spec
+      - --pihole-tls-skip-verify
+    policy: sync
+    sources: ["service", "ingress"]
+    domainFilters: ["${SECRET_DOMAIN}"]
+    serviceMonitor:
+      enabled: true
+    podAnnotations:
+      secret.reloader.stakater.com/reload: *secret
