--- a/k8s/apps/default/stash/app/helmrelease.yaml
+++ b/k8s/apps/default/stash/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
         type: emptyDir
       media:
         type: nfs
-        server: 192.168.68.10
+        server: nfs.internal
         path: /mnt/nfs
         globalMounts:
           - path: /data
