--- a/k8s/apps/default/stash/app/pvc.yaml
+++ b/k8s/apps/default/stash/app/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sonarr
+  name: stash
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
