--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
     persistence:
       media:
         type: nfs
-        server: nfs.internal
+        server: 192.168.68.24
         path: /mnt/nfs/media
         globalMounts:
           - path: /media
