--- a/k8s/apps/default/jellyfin/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyfin/app/helmrelease.yaml
@@ -117,7 +117,7 @@ spec:
         type: emptyDir
       media:
         type: nfs
-        server: nfs.internal
+        server: 192.168.68.24
         path: /mnt/nfs/media
         globalMounts:
           - path: /media
