--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -105,7 +105,7 @@ spec:
         existingClaim: qbittorrent
       media:
         type: nfs
-        server: nfs.internal
+        server: 192.168.68.24
         path: /mnt/nfs
         globalMounts:
           - path: /data
