--- a/k8s/apps/default/radarr/app/helmrelease.yaml
+++ b/k8s/apps/default/radarr/app/helmrelease.yaml
@@ -107,7 +107,7 @@ spec:
         type: emptyDir
       media:
         type: nfs
-        server: nfs.internal
+        server: 192.168.68.24
         path: /mnt/nfs
         globalMounts:
           - path: /data
