--- a/k8s/apps/default/readarr/app/pvc.yaml
+++ b/k8s/apps/default/readarr/app/pvc.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: radarr
+  name: readarr
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
     requests:
       storage: 15Gi
-  # storageClassName: ceph-filesystem
-  storageClassName: openebs-hostpath
+  storageClassName: ceph-filesystem
