--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -32,3 +32,32 @@ includes:
   workstation: .taskfiles/workstation
 tasks:
   default: task --list
+  init:
+    desc: Initialize configuration files
+    cmds:
+      - cp -n {{.BOOTSTRAP_CONFIG_FILE | replace ".yaml" ".sample.yaml"}} {{.BOOTSTRAP_CONFIG_FILE}}
+      - cmd: echo === Configuration file copied ===
+      - cmd: echo Proceed with updating the configuration files...
+      - cmd: echo {{.BOOTSTRAP_CONFIG_FILE}}
+    status:
+      - test -f {{.BOOTSTRAP_CONFIG_FILE}}
+    silent: true
+  configure:
+    desc: Configure repository from bootstrap vars
+    prompt: Any conflicting config in the kubernetes directory will be overwritten... continue?
+    deps: ['workstation:direnv', 'workstation:venv', 'sops:age-keygen', 'init']
+    cmds:
+      - task: template
+      - task: sops:encrypt
+  template:
+    internal: true
+    cmd: '{{.VIRTUAL_ENV}}/bin/makejinja'
+    preconditions:
+      - msg: Missing virtual environment
+        sh: test -d {{.VIRTUAL_ENV}}
+      - msg: Missing Makejinja config file
+        sh: test -f {{.MAKEJINJA_CONFIG_FILE}}
+      - msg: Missing Makejinja plugin file
+        sh: test -f {{.BOOTSTRAP_DIR}}/scripts/plugin.py
+      - msg: Missing bootstrap config file
+        sh: test -f {{.BOOTSTRAP_CONFIG_FILE}}
