--- a/k8s/apps/network/cloudflared/app/helmrelease.yaml
+++ b/k8s/apps/network/cloudflared/app/helmrelease.yaml
@@ -40,8 +40,8 @@ spec:
               TUNNEL_ID:
                 valueFrom:
                   secretKeyRef:
-                    name: cloudflared-secret
-                    key: TUNNEL_ID
+                    name: cloudflared-tunnel-secret
+                    key: CLUSTER_CLOUDFLARE_TUNNEL_ID
             args:
               - tunnel
               - --config
@@ -101,7 +101,7 @@ spec:
             readOnly: true
       creds:
         type: secret
-        name: cloudflared-secret
+        name: cloudflared-tunnel-secret
         globalMounts:
           - path: /etc/cloudflared/creds/credentials.json
             subPath: credentials.json
