fix: add port and config

--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -34,6 +34,10 @@ spec:
             image:
               repository: advplyr/audiobookshelf
               tag: 2.14.0@sha256:000b7d673d921a03a9168a87c82ba37c5cf3348ba6958fedc794f2b8ea4b0bf9
+            env:
+              CONFIG_PATH: /config
+              METADATA_PATH: /config/metadata
+              PORT: &port 80
             probes:
               liveness: &probes
                 enabled: true
@@ -41,7 +45,7 @@ spec:
                 spec:
                   httpGet:
                     path: /healthcheck
-                    port: &port 13378
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -81,6 +85,8 @@ spec:
                   identifier: app
                   port: http
     persistence:
+      config:
+        existingClaim: audiobookshelf
       media:
         type: nfs
         server: 192.168.68.10
