--- a/k8s/apps/default/kopia/app/helmrelease.yaml
+++ b/k8s/apps/default/kopia/app/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
               - --address
               - 0.0.0.0:80
               - --override-hostname
-              - 192.168.68.10
+              - kopia.internal
               - --override-username
               - solanyn
               - --without-password
