--- a/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
       ingress:
         enabled: true
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
         ingressClassName: internal
         hosts: ["alertmanager.${SECRET_DOMAIN}"]
         pathType: Prefix
