--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
         className: internal
         hosts:
           - host: "books.${SECRET_DOMAIN}"
