--- a/k8s/apps/network/cloudflared/app/externalsecret.yaml
+++ b/k8s/apps/network/cloudflared/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        CLUSTER_CLOUDFLARE_TUNNEL_ID: "{{ .CLUSTER_CLOUDFLARE_TUNNEL_ID }}"
+        TUNNEL_ID: "{{ .CLUSTER_CLOUDFLARE_TUNNEL_ID }}"
         credentials.json: |
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
