--- a/k8s/apps/network/cloudflared/app/helmrelease.yaml
+++ b/k8s/apps/network/cloudflared/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
                 valueFrom:
                   secretKeyRef:
                     name: cloudflared-tunnel-secret
-                    key: CLUSTER_CLOUDFLARE_TUNNEL_ID
+                    key: TUNNEL_ID
             args:
               - tunnel
               - --config
