fix: things pls

--- a/k8s/apps/default/kopia/app/externalsecret.yaml
+++ b/k8s/apps/default/kopia/app/externalsecret.yaml
@@ -49,7 +49,7 @@ spec:
               "maxMetadataCacheSize": 5242880000,
               "maxListCacheDuration": 30
             },
-            "hostname": "kopia.internal",
+            "hostname": "nfs.internal",
             "username": "solanyn",
             "description": "internal",
             "enableActions": false,
