--- a/k8s/apps/network/external-dns/pihole/helmrelease.yaml
+++ b/k8s/apps/network/external-dns/pihole/helmrelease.yaml
@@ -46,5 +46,5 @@ spec:
     domainFilters: ["${SECRET_DOMAIN}"]
     serviceMonitor:
       enabled: true
-    # podAnnotations:
-    #   secret.reloader.stakater.com/reload: *secret
+    podAnnotations:
+      secret.reloader.stakater.com/reload: *secret
