fix: storage type

--- a/k8s/apps/default/kopia/app/externalsecret.yaml
+++ b/k8s/apps/default/kopia/app/externalsecret.yaml
@@ -35,7 +35,7 @@ spec:
         repository.config: |
           {
             "storage": {
-              "type": "s3",
+              "type": "b2",
               "config": {
                 "bucket": "solanyn-lab-backups",
                 "endpoint": "s3.us-east-005.backblazeb2.com",
