--- a/k8s/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
+++ b/k8s/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
@@ -66,8 +66,8 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources: &resources
-              requests:
-                cpu: 10m
+              # requests:
+              #   cpu: 10m
               limits:
                 memory: 256M
           sync:
