--- a/k8s/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/k8s/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
       extraArgs:
         default-ssl-certificate: "network/${SECRET_DOMAIN/./-}-production-tls"
       resources:
-        requests:
-          cpu: 100m
+        # requests:
+        #   cpu: 100m
         limits:
           memory: 500Mi
