--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -83,25 +83,25 @@ spec:
       resources:
         mgr:
           requests:
-            cpu: 100m
+            # cpu: 100m
             memory: 512Mi
           limits:
             memory: 2Gi
         mon:
           requests:
-            cpu: 50m
+            # cpu: 50m
             memory: 512Mi
           limits:
             memory: 1Gi
         osd:
           requests:
-            cpu: 200m
+            # cpu: 200m
             memory: 2Gi
           limits:
             memory: 6Gi
         mgr-sidecar:
           requests:
-            cpu: 50m
+            # cpu: 50m
             memory: 128Mi
           limits:
             memory: 256Mi
@@ -161,7 +161,7 @@ spec:
                       app.kubernetes.io/part-of: *cephFileSystemName
             resources:
               requests:
-                cpu: 100m
+                # cpu: 100m
                 memory: 1Gi
               limits:
                 memory: 4Gi
@@ -205,7 +205,7 @@ spec:
             port: 80
             resources:
               requests:
-                cpu: 100m
+                # cpu: 100m
                 memory: 1Gi
               limits:
                 memory: 2Gi
