feat: free tailscale and set no requests rook

--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -26,6 +26,9 @@ spec:
     - name: snapshot-controller
       namespace: volsync-system
   values:
+    resources:
+      requests:
+        cpu: null
     csi:
       cephFSKernelMountOptions: ms_mode=prefer-crc
       enableLiveness: true
