--- a/k8s/apps/network/kustomization.yaml
+++ b/k8s/apps/network/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
   - ./namespace.yaml
   - ./cloudflared/ks.yaml
   - ./external-dns/ks.yaml
-  - ./ingress-nginx/ks.yaml
+  - ./nginx/ks.yaml
