--- a/k8s/apps/network/nginx/ks.yaml
+++ b/k8s/apps/network/nginx/ks.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app ingress-nginx-certificates
+  name: &app nginx-certificates
   namespace: flux-system
 spec:
   targetNamespace: network
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-issuers
-  path: ./k8s/apps/network/ingress-nginx/certificates
+  path: ./k8s/apps/network/nginx/certificates
   prune: true
   sourceRef:
     kind: GitRepository
@@ -22,7 +22,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app ingress-nginx-internal
+  name: &app nginx-internal
   namespace: flux-system
 spec:
   targetNamespace: network
@@ -30,8 +30,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: ingress-nginx-certificates
-  path: ./k8s/apps/network/ingress-nginx/internal
+    - name: nginx-certificates
+  path: ./k8s/apps/network/nginx/internal
   prune: true
   sourceRef:
     kind: GitRepository
@@ -43,7 +43,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app ingress-nginx-external
+  name: &app nginx-external
   namespace: flux-system
 spec:
   targetNamespace: network
@@ -51,8 +51,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: ingress-nginx-certificates
-  path: ./k8s/apps/network/ingress-nginx/external
+    - name: nginx-certificates
+  path: ./k8s/apps/network/nginx/external
   prune: true
   sourceRef:
     kind: GitRepository
