--- a/k8s/apps/cert-manager/cert-manager/ks.yaml
+++ b/k8s/apps/cert-manager/cert-manager/ks.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -8,15 +9,16 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/cert-manager/cert-manager/app
+  path: ./k8s/cert-manager/cert-manager/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: home-kubernetes
   wait: true
   interval: 30m
   timeout: 5m
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -29,11 +31,12 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager
-  path: ./k8s/apps/cert-manager/cert-manager/issuers
+    - name: external-secrets-stores
+  path: ./k8s/cert-manager/cert-manager/issuers
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: home-kubernetes
   wait: true
   interval: 30m
   timeout: 5m
